feat: added docker configuration